# package_manager

./: README.md  requirements.txt  setup.cfg  testing.ipynb
docs/: .buildinfo  genindex.html  index.html  kabbes_repository_manager.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/kabbes_repository_manager/: Remote.html  Remotes.html  Repo.html  Repos.html  main.html
docs/_sources/: index.rst.txt  kabbes_repository_manager.rst.txt  modules.rst.txt
src/kabbes_package_manager/: Package.py  Packages.py  __init__.py  __main__.py
src/kabbes_repository_manager/: Remote.py  Remotes.py  Repo.py  Repos.py  __init__.py  __main__.py  main.py
