[metadata]
name = kabbes_package_manager
version = 0.1.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Unnamed repository; edit this file 'description' to name the repository.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes-package-manager/
project_urls =
    GitHub = https://github.com/jameskabbes/package_manager
    Documentation = https://jameskabbes.github.io/package_manager
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src