[metadata]
name = kabbes_repository_manager
version = 0.0.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Unnamed repository; edit this file 'description' to name the repository.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes-repository-manager/
project_urls =
    GitHub = https://github.com/jameskabbes/repository_manager
    Documentation = https://jameskabbes.github.io/repository_manager
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    kabbes_py_starter
    kabbes_menu
    kabbes_parent_class
    GitPython
    kabbes_dir_ops

[options.packages.find]
where = src